# linic-news

./: makefile  pyproject.toml
.github/worflows/: update_content.yml
.github/workflows/: update_content.yml
linic-web/: package-lock.json  package.json
linic-web/src/app/: page.tsx
linic-web/src/app/news/[id]/: page.tsx
linic-web/src/components/: nav-bar.tsx  news-detail.tsx  news-feed.tsx
linic-web/src/types/: news.ts
linic-web/src/types/types/: news.ts
scripts/: hn_loader.py
src/: bindings.py  config.py  database.py  main.py
src/bff/: controller.py  dto.py
src/cron/: repository.py  service.py
src/misc/: casing_utils.py  pagination.py
src/platform_deps/: slack_client.py
web/: components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: articles.json  index.css  index.tsx  result.json
web/src/components/Article/: Article.tsx  index.ts
web/src/components/NavBar/: NavBar.tsx  index.ts
web/src/components/NewsFeed/: NewsFeed.tsx  index.ts
web/src/lib/: utils.ts
web/src/types/: news.ts
