[project]
name = "linic-news"
version = "0.1.0"
description = "News aggregation and summarization project"
readme = "README.md"
requires-python = ">=3.10.14,<4.0"
dependencies = [
    "apscheduler>=3.11.0",
    "dependency-injector>=4.45.0",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "psycopg>=3.2.3",
    "psycopg-pool>=3.2.4",
    "pydantic-settings>=2.7.1",
    "ruff>=0.9.1",
    "toradh>=0.2.2",
    "openai (>=1.76.0,<2.0.0)",
    "hackernews (>=2.0.0,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]




[tool.mypy]
# Include common directories
files = ["src"]

# Disallow dynamic typing by default (stricter checks)
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Report errors for missing imports
ignore_missing_imports = false

# Warn about unused "type: ignore" comments
warn_unused_ignores = true

# Check for untyped calls
disallow_untyped_calls = true

# Check for untyped decorator functions
disallow_untyped_decorators = true

# Ensure strict optional checking
strict_optional = true

# Type-check variable assignments
disallow_untyped_globals = true

# Warn about unreachable code
warn_unreachable = true

# Show the error code of each error message
show_error_codes = true

# Set the target Python version (e.g., 3.10)
python_version = "3.10"

# Report any non-local imports that don't use a relative path
no_implicit_reexport = true

# Do not allow any function to have both an argument without a default and a keyword-only argument after it
allow_redefinition = false

# Do not follow imports to .pyi type stubs (may be useful if the stub files are incomplete or inaccurate)
# follow_imports = "silent"

# Set the cache directory (optional)
cache_dir = ".mypy_cache"

# Exclude certain files or directories from type checking (e.g., migrations in Django projects)
exclude = ["migrations", "docs", "build"]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"
mypy = "^1.15.0"

